[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/ui/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/QuestDialog.gd" type="Script" id=2]

[node name="QuestDialog" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -54.0
margin_right = 160.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogText" type="RichTextLabel" parent="."]
margin_left = 94.0
margin_top = 18.0
margin_right = 226.0
margin_bottom = 50.0
grow_vertical = 0
text = "This is some sample dialog text"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypingTimer" type="Timer" parent="."]
wait_time = 0.05
[connection signal="timeout" from="TypingTimer" to="." method="_on_TypingTimer_timeout"]
